--- a/PhotoUploadTool/Storyboard_iphone.storyboard
+++ b/PhotoUploadTool/Storyboard_iphone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="qsd-pf-VRE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="L3p-11-AtP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -1569,6 +1569,158 @@
         <image name="privatePwd_textbg.png" width="411" height="85"/>
         <image name="setting.png" width="48" height="48"/>
     </resources>
+    <classes>
+        <class className="DRTabBarController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DRTabBarController.h"/>
+            <relationships>
+                <relationship kind="action" name="modifyBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="privateItemSelected:" candidateClass="UIButton"/>
+                <relationship kind="action" name="publicItemSelected:" candidateClass="UIButton"/>
+                <relationship kind="action" name="settingItemSelected:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contentView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="drtabBarView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="privateItemBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="publicItemBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="pwdCoverView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="pwdLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="settingItemBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="underLine" candidateClass="UIView"/>
+                <relationship kind="outlet" name="webURLLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="DRWaterFlowViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DRWaterFlowViewController.h"/>
+        </class>
+        <class className="ForgetPasswordAlertView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ForgetPasswordAlertView.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelBtClicked:"/>
+                <relationship kind="action" name="okBtClicked:"/>
+                <relationship kind="outlet" name="borderView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="emailLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="rePasswordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="tipLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ForgotPasswordController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ForgotPasswordController.h"/>
+            <relationships>
+                <relationship kind="action" name="OKBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="backBtClicked:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="pwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="rePwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="tabbarTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tabbarView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="GridViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GridViewController.h"/>
+        </class>
+        <class className="LoginInController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginInController.h"/>
+            <relationships>
+                <relationship kind="action" name="LoginBtClicked:"/>
+                <relationship kind="action" name="forgotPasswordClicked:"/>
+                <relationship kind="action" name="registerBtClicked:"/>
+                <relationship kind="outlet" name="forgotPwdBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="passwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="registerBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="typeBackground" candidateClass="UIView"/>
+                <relationship kind="outlet" name="userNameField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ModifyEmailView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ModifyEmailView.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelBtClicked:"/>
+                <relationship kind="action" name="okBtClicked:"/>
+                <relationship kind="outlet" name="borderView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="tipLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ModifyUserPasswordController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ModifyUserPasswordController.h"/>
+            <relationships>
+                <relationship kind="action" name="okBtClicked:"/>
+                <relationship kind="outlet" name="dNewPwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="oldPwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="reNewPwdField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+        <class className="NotificationCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="backImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="detalLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="summaryLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="NotificationController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationController.h"/>
+        </class>
+        <class className="RegisterController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RegisterController.h"/>
+            <relationships>
+                <relationship kind="action" name="backBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="okButtonClicked:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="pwField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="pwdLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="rePwField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="rePwdlabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="tabbarTitleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="SettingController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelUserBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="emailBtClicked:"/>
+                <relationship kind="action" name="locationBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="locationTypeChanged:" candidateClass="UISwitch"/>
+                <relationship kind="action" name="loginOutBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="modifyPwdBtClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="notificationBtClicked:"/>
+                <relationship kind="outlet" name="emailBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="infoTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="locationBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="locationTypeSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="notificationBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="settingView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="userInfoView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="SettingPrivatePwdView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingPrivatePwdView.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteBt:"/>
+                <relationship kind="action" name="okBt:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="borderView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="tipLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="UPLoadImageController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UPLoadImageController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="progressBar" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
