--- a/PhotoUploadTool/Storyboard_iphone.storyboard
+++ b/PhotoUploadTool/Storyboard_iphone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="bxP-xo-00d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="qsd-pf-VRE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -663,10 +663,11 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yr4-Ek-bXj">
-                                        <rect key="frame" x="254" y="8" width="44" height="29"/>
+                                        <rect key="frame" x="270" y="7" width="30" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                        <state key="normal">
+                                        <state key="normal" image="tabbarEdit.png">
                                             <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1752,6 +1753,7 @@
         <image name="privatePwd_ok.png" width="414" height="88"/>
         <image name="privatePwd_textbg.png" width="411" height="85"/>
         <image name="setting.png" width="48" height="48"/>
+        <image name="tabbarEdit.png" width="48" height="48"/>
     </resources>
     <classes>
         <class className="DRTabBarController" superclassName="UIViewController">
