--- a/PhotoUploadTool/Storyboard_iphone.storyboard
+++ b/PhotoUploadTool/Storyboard_iphone.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <viewController id="eAq-hv-v2N" customClass="DRWaterFlowViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KaF-AA-wlQ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -38,7 +38,7 @@
             <objects>
                 <viewController id="SS9-15-aQV" customClass="LoginInController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sQi-NO-blW">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="logo.png" id="8ZG-hy-nQ1" userLabel="logoImage">
@@ -87,7 +87,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="U7d-mC-HPl">
-                                <rect key="frame" x="165" y="523" width="83" height="25"/>
+                                <rect key="frame" x="165" y="435" width="83" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                 <state key="normal" title="注册帐号">
@@ -103,7 +103,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="1DU-O7-t8w">
-                                <rect key="frame" x="54" y="523" width="83" height="25"/>
+                                <rect key="frame" x="54" y="435" width="83" height="25"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                 <state key="normal" title="找回密码">
@@ -119,7 +119,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" id="6oS-CZ-2kK">
-                                <rect key="frame" x="150" y="526" width="2" height="20"/>
+                                <rect key="frame" x="150" y="438" width="2" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" red="0.16862745579999999" green="0.47843140360000003" blue="0.78039222959999999" alpha="1" colorSpace="deviceRGB"/>
                             </view>
@@ -145,11 +145,11 @@
             <objects>
                 <viewController storyboardIdentifier="ForgotPasswordController" id="32J-o1-hVH" customClass="ForgotPasswordController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E4d-uj-Ypt">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="Eca-9G-y0d">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="uAD-7C-osX" userLabel="borderView">
@@ -369,7 +369,7 @@
             <objects>
                 <viewController storyboardIdentifier="ForgetPasswordAlertView" id="n8C-rr-8Aa" userLabel="forgetPasswordAlertView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zz6-gu-IIi" userLabel="forgetpasswordView" customClass="ForgetPasswordAlertView">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="svx-2w-LvE" userLabel="borderView">
@@ -494,6 +494,7 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hLE-X7-0s0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -504,7 +505,7 @@
             <objects>
                 <viewController storyboardIdentifier="SettingPrivatePwdView" id="UAP-bo-qP5" userLabel="settingPrivatePWdController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kzu-Q3-Dfx" customClass="SettingPrivatePwdView">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="9XD-Gg-P2Z" userLabel="borderView">
@@ -596,18 +597,18 @@
             <objects>
                 <viewController storyboardIdentifier="UPLoadImageController" id="5Et-73-kwY" customClass="UPLoadImageController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9g4-Qm-VOE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GLv-EY-mVi">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="26"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <progressView opaque="NO" contentMode="scaleToFill" progress="0.5" id="14r-u5-DGd">
-                                <rect key="frame" x="-3" y="191" width="325" height="9"/>
+                                <rect key="frame" x="-3" y="30" width="325" height="9"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" red="0.88627457620000005" green="0.87058830259999997" blue="0.84313732389999996" alpha="1" colorSpace="deviceRGB"/>
                             </progressView>
@@ -633,11 +634,11 @@
             <objects>
                 <viewController storyboardIdentifier="NotificationController" id="bxP-xo-00d" customClass="NotificationController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="giB-Kb-f0p">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="0Jk-e9-o5f" userLabel="contentView">
-                                <rect key="frame" x="0.0" y="45" width="320" height="503"/>
+                                <rect key="frame" x="0.0" y="45" width="320" height="415"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -711,7 +712,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="NotificationTableViewController" id="Shl-bu-Xyo" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="77" sectionHeaderHeight="22" sectionFooterHeight="22" id="S6m-KS-kJy">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -792,15 +793,15 @@
             <objects>
                 <viewController storyboardIdentifier="DRTabBarController" id="L3p-11-AtP" customClass="DRTabBarController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O7a-p9-bfN">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="xE8-mW-Xb3" userLabel="contentView">
-                                <rect key="frame" x="0.0" y="45" width="320" height="503"/>
+                                <rect key="frame" x="0.0" y="45" width="320" height="415"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="0.92156869173049927" green="0.96862751245498657" blue="0.96078437566757202" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.2456287918" green="0.91539996599999995" blue="0.25050926849999999" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" id="lew-RC-VSd" userLabel="pwdCoverView">
+                            <view hidden="YES" contentMode="scaleToFill" id="lew-RC-VSd" userLabel="pwdCoverView">
                                 <rect key="frame" x="0.0" y="45" width="320" height="40"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -924,7 +925,7 @@
             <objects>
                 <viewController storyboardIdentifier="ModifyEmailView" id="j27-H5-LEb" userLabel="modifyEmailController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NU4-e3-nzL" customClass="ModifyEmailView">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="UL1-Mc-wUX" userLabel="borderView">
@@ -1024,11 +1025,11 @@
             <objects>
                 <viewController title="注册" id="MuD-AL-Z8H" userLabel="registerController - 注册" customClass="RegisterController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ffp-Qq-3dd">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="4yD-FN-pQC">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="6fv-Jv-iVJ" userLabel="borderView">
@@ -1249,7 +1250,7 @@
             <objects>
                 <viewController storyboardIdentifier="SettingController" id="DDN-qc-L28" customClass="SettingController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sqO-in-e0C">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="M54-xt-yPH">
@@ -1524,11 +1525,11 @@
             <objects>
                 <viewController id="uzO-wP-861" customClass="ModifyUserPasswordController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Ps-Mg-OSz">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="6kx-An-44p">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="kUu-2O-KAf" userLabel="borderView">
@@ -1936,6 +1937,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
